@@ -723,6 +723,10 @@ $rcmail_config['default_charset'] = 'ISO-8859-1';
 // skin name: folder from skins/
 $rcmail_config['skin'] = 'larry';
 
+// Enables using standard browser windows (that can be handled as tabs)
+// instead of popup windows
+$rcmail_config['standard_windows'] = false;
+
 // show up to X items in messages list view
 $rcmail_config['mail_pagesize'] = 50;
 
